--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,14 @@
 # User-specific stuff:
-**/.idea/workspace.xml
-**/.idea/tasks.xml
-**/.idea/dictionaries
-**/.idea/vcs.xml
-**/.idea/jsLibraryMappings.xml
+/.idea/
 
-# Sensitive or high-churn files:
-**/.idea/dataSources.ids
-**/.idea/dataSources.xml
-**/.idea/dataSources.local.xml
-**/.idea/sqlDataSources.xml
-**/.idea/dynamic.xml
-**/.idea/uiDesigner.xml
-
-## File-based project format:
-*.iws
 
 # IntelliJ
 /out/
 /node_modules
 /public/hot
 /public/storage
+/public/images/old-version
+/public/images/psd
 /storage/*.key
 /vendor
 .env
@@ -31,5 +19,3 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-public/images/old-version
-public/images/psd
